# API_EBAC

./: Dockerfile  README.md  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py
order/models/: order.py
order/serializers/: __init__.py  order_serializers.py
order/test/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/serializers/: __init__.py  category_serializers.py  product_serializers.py
product/test/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
