[tool.poetry]
name = "api - ebac"
version = "0.1.0"
description = "Bookstore API"
authors = ["Maicon Leandro <snubhousedev@gmail.com>"]
readme = "README.md"
packages = [{include = "api _ ebac"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
